// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle component should render correctly with all the default props 1`] = `
.c2 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c0 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  align-items: center;
  grid-template-columns: max-content minmax(max-content, 25%);
  grid-template-areas: 'field label' 'description random';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c0 .c1 {
  display: inline-flex;
  align-items: center;
  flex-direction: row-reverse;
}

.c3 {
  position: relative;
  width: calc(24px * 1.75);
  height: 24px;
  border-radius: 1.5rem;
  background-color: #dfe4e9;
}

.c3:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c3>* {
  width: 100%;
  height: 100%;
  border-radius: 1.5rem;
}

.c6 {
  position: relative;
  width: 100%;
  overflow: hidden;
  display: flex;
  align-items: flex-end;
}

.c8 {
  z-index: 1;
  position: absolute;
  height: calc(24px - 0.8rem);
  width: calc(24px - 0.8rem);
  margin: 0.4rem;
  border-radius: 50%;
  background: #ffffff;
  box-shadow: 0.1rem 0.3rem 0.3rem 0.1rem rgba(0,0,0,0.2);
  transition: 0.2s;
}

.c4 {
  opacity: 0;
  z-index: 2;
  margin: 0;
  position: absolute;
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c4:disabled+.c5 {
  background: #C7D0D8;
}

.c4:checked+.c5 {
  background: #012040;
}

.c4:checked+.c5 .c7 {
  transform: translateX(calc(24px * 0.75) );
}

<div>
  <div
    class="c0"
    id="medly-toggle-checkbox"
    labelposition="right"
  >
    <div
      class="c1 c2 c3"
    >
      <input
        class="c4"
        id="medly-toggle-checkbox"
        name="gender"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <div
          class="c7 c8"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Toggle component should render correctly with all the props given 1`] = `
.c1 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0px 0.8rem;
  cursor: not-allowed;
}

.c4 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c2 {
  grid-area: label;
  align-self: center;
  user-select: none;
}

.c0 {
  margin: 0.8rem 0;
  display: grid;
  align-items: center;
  grid-template-columns: max-content minmax(max-content, 25%);
  grid-template-areas: 'field label' 'description random';
}

.c0 .c3 {
  display: flex;
  align-items: center;
  flex-direction: row-reverse;
}

.c5 {
  position: relative;
  width: calc(28px * 1.75);
  height: 28px;
  border-radius: 1.5rem;
  background-color: #dfe4e9;
}

.c5:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c5>* {
  width: 100%;
  height: 100%;
  border-radius: 1.5rem;
}

.c8 {
  position: relative;
  width: 100%;
  overflow: hidden;
  display: flex;
  align-items: flex-end;
}

.c10 {
  z-index: 1;
  position: absolute;
  height: calc(28px - 0.8rem);
  width: calc(28px - 0.8rem);
  margin: 0.4rem;
  border-radius: 50%;
  background: #ffffff;
  box-shadow: 0.1rem 0.3rem 0.3rem 0.1rem rgba(0,0,0,0.2);
  transition: 0.2s;
}

.c6 {
  opacity: 0;
  z-index: 2;
  margin: 0;
  position: absolute;
  cursor: pointer;
}

.c6:focus {
  outline: none;
}

.c6:disabled {
  cursor: not-allowed;
}

.c6:disabled+.c7 {
  background: #C7D0D8;
}

.c6:checked+.c7 {
  background: #012040;
}

.c6:checked+.c7 .c9 {
  transform: translateX(calc(28px * 0.75) );
}

<div>
  <div
    class="c0"
    id="gender-toggle"
    labelposition="right"
  >
    <label
      class="c1 c2"
      for="gender-toggle"
      labelposition="right"
    >
      Female
    </label>
    <div
      class="c3 c4 c5"
      disabled=""
    >
      <input
        class="c6"
        disabled=""
        id="gender-toggle"
        name="gender"
        type="checkbox"
      />
      <div
        class="c7 c8"
      >
        <div
          class="c9 c10"
        />
      </div>
    </div>
  </div>
</div>
`;
